# TradeEngine

./: CMakeLists.txt  README.md
CQGTrade/: App.cpp  App.hpp  CMakeLists.txt  CQGTrade.cpp  CQGTrade.h  CommandBase.hpp  CommandEngine.cpp  CommandEngine.hpp  MakeOrderCommand.cpp  MakeOrderCommand.hpp  Market.cpp  Market.hpp  OrderBase.hpp  PrintTrades.cpp  PrintTrades.hpp  Prototypes.hpp  Trade.cpp  utills.cpp  utils.hpp
src/: BasicOrder.cpp  BasicOrder.hpp  CMakeLists.txt  CommandBase.hpp  CommandEngine.cpp  Market.cpp  Market.hpp  OrderType.hpp  PrintTrades.cpp  PrintTrades.hpp  Trade.hpp  Trader.cpp  Trader.hpp  main.cpp
